# prime

./: .gitignore  .wrapr  Cargo.toml  README.md  UPGRADE_SUMMARY.md  bootstrap_infinite_ai.sh  build.ps1  bump.ps1  commands.go  design.md  go.mod  handlers.yaml  index.js  instructions_for_developer.md  main.go  master_specification.md  memory.go  memory.yaml  note.md  package.json  prime.sh  prompt_template.md  readme.md  session.go  types.go
conversations/session_20250607_175437/: 001_user.md  002_prime.md  003_user.md  004_prime.md  005_user.md  006_prime.md
conversations/session_20250609_120314/: 001_user.md  002_prime.md  003_user.md  004_prime.md  005_user.md  006_prime.md  007_user.md  008_prime.md
conversations/session_20250609_124158/: 001_user.md  002_prime.md  003_user.md  004_prime.md  005_user.md  006_prime.md  007_user.md  008_prime.md
conversations/session_20250609_125502/: 001_user.md  002_prime.md  003_system.md  004_system.md  005_prime.md  006_system.md  007_system.md  008_prime.md  009_system.md  010_system.md  011_prime.md  012_system.md  013_system.md
conversations/session_20250609_130201/: 001_user.md  002_prime.md  003_system.md  004_user.md
conversations/session_20250609_131445/: 001_user.md  002_prime.md  003_system.md  004_prime.md  005_system.md  006_prime.md  007_system.md  008_prime.md  009_system.md  010_prime.md  011_system.md  012_system.md
conversations/session_20250609_133232/: 001_user.md  002_prime.md  003_system.md
docs/: README.md  clg.md  logging.md  memory.md  scp.md  ucm.md
memory/: long_term.md  short_term.md
probes/: README.md  p1_grammar.md  p2_instruction.md  p3_decompose.md  p4_fix_fence.md  p5_tool_decision.md
prompts/: system_prompt.md
src/: actions.rs  commands.rs  config.rs  config_utils.rs  console.rs  display.rs  environment.rs  logging.rs  main.rs  memory.rs  parser.rs  session.rs  shader.wgsl  streaming.rs  styling.rs  templates.rs  terminal_ui.rs  ui.rs  web_ops.rs
src/ui/: app.js  (+1 more)
(+88 files in other folders)
