[package]
name = "prime"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for prime number generation and checking"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
console = "0.15"
dirs = "5.0"
futures = "0.3"
indicatif = "0.17"
lazy_static = "1.5.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "stream", "gzip"] }
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
