[package]
name = "prime"
version = "0.1.13"
edition = "2021"
description = "A CLI tool for interacting with LLMs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
crossterm = "0.29.0" # For all styling
futures = "0.3.31"
indicatif = "0.18.0"
reqwest = { version = "0.12.22", features = ["json", "stream", "gzip"] }
rustyline = "16.0.0"
tokio = { version = "1.46.1", features = ["full"] }
llm = { version = "1.3.1", features = ["google", "ollama"] }
dirs = "6.0.0"
glob = "0.3.2"
serde_json = "1.0.140"
regex = "1.11.1"





